crates/docnav-typed-fields/tests/ui/field_defs_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/ui/field_defs_type_mismatch.rs:8:25
  |
8 |             .validation(FieldValidation::string())
  |              ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `FieldValidation<i64>`, found `FieldValidation<String>`
  |              |
  |              arguments to this method are incorrect
  |
  = note: expected struct `FieldValidation<i64>`
             found struct `FieldValidation<std::string::String>`
note: method defined here
 --> src/field.rs
  |
  |     pub fn validation<U>(self, validation: FieldValidation<U>) -> FieldDefBuilder<U> {
  |            ^^^^^^^^^^
