crates/docnav-typed-fields/tests/ui/field_defs_type_mismatch.rs
use docnav_typed_fields::{FieldDef, FieldDefs, FieldValidation};

#[derive(FieldDefs)]
struct Params {
    #[field(
        FieldDef::builder("docnav.defaults.limit_chars")
            .path(["defaults", "limit_chars"])
            .validation(FieldValidation::string())
    )]
    limit_chars: i64,
}

fn main() {}
